# sonic-restapi

./: .Dockerfile.build.swp  .gitignore  CreateMockPort.sh  Dockerfile  Dockerfile.bm.prod  Dockerfile.build  Dockerfile.common.prod  Dockerfile.msee.prod  Dockerfile.test  LICENSE  Makefile  Makefile.am  NEWS  README.md  azurepipeline.yml  build.md  build.sh  configure.ac  copy.py  copy.sh  cover.sh  dependencies.conf  package.cfg  sonic_api.yaml
.github/: copilot-instructions.md
.github/workflows/: codeql.yml
MSEE/: .gitignore  Dockerfile  Dockerfile.bm.prod  Dockerfile.build  Dockerfile.common.prod  Dockerfile.msee.prod  Dockerfile.test  Makefile  build.sh  copy.sh  mseev2.yaml  sonic_api.yaml  start.sh  test.sh
MSEE/arp_responder/: .gitignore  Makefile  arp.cc  arpresponder_bm.cc  arpresponder_bm.h  (+7 more)
arp_responder/: ToDo  arp.h  arp_responder.thrift  arpresponder_msee.cc  arpresponder_msee.h  cmd.cc  cmd.h  eintr.h  fmt.cc  fmt.h  log.h
arpthrift/: GoUnusedProtection__.go  arp-consts.go
debian/: changelog  control  rules
debug/: show_interface
files/: server_kill.py
go-server-server/: go.mod  go.sum  main.go  main_test.go
mseethrift/: GoUnusedProtection__.go  msee.go
mseethrifttest/: Makefile  client.go  server.go
sonic/: db_sql_defines.h  db_sql_ops.h
src/: Makefile  db_sql_ops.c
supervisor/: arp_responder_bm.conf  redis.conf  rest_api.conf  rest_api_test.conf
swsscommon/: dbconnector.go  go.mod  producerstatetable.go  table.go
swsscommontest/: main.go
test/: apitest.py  conftest.py  requirements.txt  restapi_client.py  test_restapi.py
(+75 files in other folders)
